--- a/OnboardingPlatform/OnboardingPlatform/appsettings.json
+++ b/OnboardingPlatform/OnboardingPlatform/appsettings.json
@@ -6,12 +6,12 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "test"
+    "DefaultConnection": "Data Source=database.db"
   },
   "Jwt": {
     "Issuer": "https://yourapi.com",
     "Audience": "https://yourclient.com",
-    "SecretKey": "THIS_IS_A_VERY_STRONG_AND_LONG_SECRET_KEY_REPLACE_IT",
+    "SecretKey": "KjhpWEGIKVUkg5jADrTI32UzsvEoiLQf",
     "AccessTokenExpirationMinutes": 15,
     "RefreshTokenExpirationDays": 7
   },
